--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,12 +1,3 @@
-.navbar {
-  background-color: #01203a;
-  color: white;
-  padding: 12px 26px 14px 10px !important;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  z-index: 1009 !important;
-}
 
 .website-logo-text {
   margin: 0;
@@ -30,11 +21,11 @@
   padding: 10px;
 }
 
-.static-navbar {
+/* .static-navbar {
   padding-top: 18px;
   margin-bottom: 30px;
   margin-left: 0;
-}
+} */
 
 .static-navbar {
   visibility: hidden;
@@ -47,7 +38,8 @@
 }
 
 .bars {
-  float: right;
+  float: left;
+  padding: 20px;
   font-size: 20px;
   background: none;
   color: #e89c35;
