fixed firebase functions

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -59,7 +59,7 @@
 }
 
 .staticSidebar {
-  background-color: #01203a;
+  background-color: #000000;
   width: 90px;
   height: 100vh;
   display: flex;
