--- a/src/components/Courses.css
+++ b/src/components/Courses.css
@@ -8,20 +8,26 @@
 
 .courseBox {
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.05);
-
   border-radius: 9px !important;
   background-color: rgb(247, 247, 247);
   padding: 20px;
   min-height: 50px;
   max-width: 100%;
-  text-align: center;
   display: flex;
-  align-items: center;
+flex-direction: column;
   margin-bottom: 20px;
   margin-right: 20px;
 }
 
+.courseBox h1 {
+  font-size: 20px;
+  margin-top: 0;
+}
 .courseBox h3 {
+  margin: 0 0 0 0;
+}
+
+.courseBox h4 {
   margin: 0 0 0 0;
 }
 
@@ -30,10 +36,6 @@
   font-weight: 400;
   margin-bottom: 30px;
 }
-
-/* .courseBox:hover {
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.05);
-} */
 
 .courseComponent {
   display: flex;
