--- a/src/components/CourseReviews.css
+++ b/src/components/CourseReviews.css
@@ -13,3 +13,28 @@
   margin-bottom: 20px;
   margin-right: 20px;
 }
+
+.rating-big {
+  font-size: 60px;
+  color: #e89c35;
+  line-height: .8;
+  padding-right: 5px;
+}
+
+.rating-title {
+  margin: 0;
+}
+
+.rate-btn {
+  background-color: #e89c35;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 25px;
+  margin-bottom: 20px;
+}
