--- a/client/src/components/Categories.css
+++ b/client/src/components/Categories.css
@@ -10,7 +10,7 @@
 .categoryBox {
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.05);
   border-radius: 9px !important;
-  background-color: rgb(247, 247, 247);
+  background-color: white;
   padding: 20px;
   min-height: 200px;
   min-width: 300px;
