--- a/client/src/components/CourseReviews.css
+++ b/client/src/components/CourseReviews.css
@@ -8,7 +8,7 @@
   text-align: left;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.05);
   border-radius: 9px !important;
-  background-color: rgb(247, 247, 247);
+  background-color: white;
   padding: 20px;
   margin-bottom: 20px;
   margin-right: 20px;
