--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -2,5 +2,29 @@
     margin-left: 90px;
     padding: 0 20px;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+  
+
+  .go-to-schools-btn {
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    margin-top: 4rem;
+    padding: 10px 16px;
+    background-color: #e89c35; 
+    color: white;
+    border-radius: 40px;
+    font-weight: 500;
+    text-decoration: none;
+    transition: background-color 0.2s ease;
+    font-size: 16px;
+    width: 130px;
+    align-self: center;
+  }
+  
+  .go-to-schools-btn:hover {
+    background-color: #e7ab58; /* Tailwind's blue-800 */
   }
   
